<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="50dp"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <android.support.v7.widget.CardView
        android:id="@+id/survey_data_layout"
        android:layout_width="match_parent"
        app:cardCornerRadius="5dp"
        app:cardElevation="10dp"
        android:layout_height="50dp">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <RelativeLayout
                android:layout_width="250dp"
                android:layout_height="match_parent"
                android:paddingLeft="5dp"
                android:orientation="vertical">
                <TextView
                    android:id="@+id/admin_survey_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentTop="true"
                    android:textSize="15dp"
                    android:gravity="center"
                    android:text="@string/admin_survey_name"/>
                <TextView
                    android:id="@+id/admin_survey_id"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentBottom="true"
                    android:gravity="center"
                    android:textSize="12dp"
                    android:text="@string/admin_survey_id"/>

            </RelativeLayout>

            <Button
                android:id="@+id/survey_rslt_sts_btn"
                android:layout_width="150dp"
                android:layout_height="match_parent"
                android:layout_alignParentRight="true"
                android:padding="5dp"
                android:textColor="@android:color/darker_gray"
                android:background="@drawable/admin_survey_status_btn_bg"
                android:text="@string/admin_survey_btn_text"/>
        </RelativeLayout>
    </android.support.v7.widget.CardView>
</android.support.constraint.ConstraintLayout>