<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:card_view="http://schemas.android.com/tools"
    android:background="@color/transparant_color"
    android:padding="20dp">

   <android.support.v7.widget.CardView
       android:id="@+id/card_view"
       android:layout_width="fill_parent"
       android:layout_height="wrap_content"
       android:layout_gravity="center"
       android:layout_margin="5dp"
       card_view:cardCornerRadius="2dp"
       card_view:contentPadding="10dp"
       app:cardElevation="10dp"
       app:layout_constraintTop_toTopOf="parent"
       app:layout_constraintBottom_toBottomOf="parent"
       app:layout_constraintHorizontal_bias="0.5"
       app:layout_constraintVertical_bias="0.5"
       card_view:background="@drawable/survey_create_panel_bg">

      <RelativeLayout
          android:id="@+id/survey_panel_layout"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_marginLeft="20dp"
          android:layout_marginRight="20dp"
          android:focusable="true"
          android:focusableInTouchMode="true"
          android:paddingBottom="10dp">

         <android.support.design.widget.TextInputLayout
             android:id="@+id/survey_id_layout"
             android:layout_width="500dp"
             android:layout_height="wrap_content"
             android:layout_marginTop="8dp"
             android:layout_marginBottom="8dp"
             android:layout_marginRight="8dp"
             android:backgroundTint="@android:color/transparent"
             app:layout_constraintRight_toRightOf="parent"
             android:layout_marginLeft="8dp"
             app:layout_constraintLeft_toLeftOf="parent">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/survey_id_edt"
                android:layout_width="200dp"
                android:textSize="14dp"
                android:focusableInTouchMode="true"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:hint="@string/survey_id_text"
                android:inputType="textEmailAddress"/>

         </android.support.design.widget.TextInputLayout>

         <android.support.design.widget.TextInputLayout
             android:id="@+id/survey_titl_layout"
             android:layout_width="500dp"
             android:layout_height="wrap_content"
             android:layout_marginTop="8dp"
             android:layout_marginBottom="8dp"
             android:layout_marginRight="8dp"
             app:layout_constraintRight_toRightOf="parent"
             android:layout_marginLeft="8dp"
             android:backgroundTint="@android:color/transparent"
             android:layout_below="@id/survey_id_layout"
             app:layout_constraintLeft_toLeftOf="parent">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/survey_titl_edt"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:textSize="14dp"
                android:focusableInTouchMode="true"
                android:hint="@string/survey_title_txt"
                android:inputType="textEmailAddress"/>

         </android.support.design.widget.TextInputLayout>

         <RelativeLayout
             android:id="@+id/survy_length_hdng"
             android:layout_width="500dp"
             android:layout_height="wrap_content"
             android:layout_marginTop="8dp"
             android:layout_marginBottom="8dp"
             android:layout_marginRight="8dp"
             android:gravity="left"
             android:layout_below="@id/survey_titl_layout">
            <TextView
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:gravity="left"
                android:textSize="14dp"
                android:textStyle="bold"
                android:textColor="@color/colorPrimary"
                android:text="@string/survy_length_hdng"/>
         </RelativeLayout>



         <android.support.design.widget.TextInputLayout
             android:id="@+id/end_date_layout"
             android:layout_width="500dp"
             android:layout_height="wrap_content"
             android:layout_marginTop="8dp"
             android:layout_marginBottom="8dp"
             android:layout_marginRight="8dp"
             android:layout_below="@id/survy_length_hdng"
             android:backgroundTint="@android:color/transparent"
             app:layout_constraintRight_toRightOf="parent"
             android:layout_marginLeft="8dp"
             app:layout_constraintLeft_toLeftOf="parent">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/end_date"
                android:layout_width="200dp"
                android:textSize="14dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:hint="@string/select_date_text"
                android:inputType="textEmailAddress"/>

         </android.support.design.widget.TextInputLayout>

         <android.support.design.widget.TextInputLayout
             android:id="@+id/end_time_layout"
             android:layout_width="500dp"
             android:layout_height="wrap_content"
             android:layout_marginTop="8dp"
             android:layout_marginBottom="8dp"
             android:layout_marginRight="8dp"
             app:layout_constraintRight_toRightOf="parent"
             android:layout_marginLeft="8dp"
             android:backgroundTint="@android:color/transparent"
             android:layout_below="@id/end_date_layout"
             app:layout_constraintLeft_toLeftOf="parent">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/end_time"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:textSize="14dp"
                android:hint="@string/select_time_text"
                android:inputType="textEmailAddress"/>

         </android.support.design.widget.TextInputLayout>

      </RelativeLayout>
   </android.support.v7.widget.CardView>

   <RelativeLayout
       android:id="@+id/create_btn_layout"
       android:layout_width="0dp"
       android:layout_height="50dp"
       android:layout_marginTop="20dp"
       android:layout_marginBottom="100dp"
       app:layout_constraintStart_toStartOf="parent"
       app:layout_constraintEnd_toEndOf="parent"
       app:layout_constraintTop_toBottomOf="@id/card_view"
       android:background="@color/colorPrimary">

      <TextView
          android:id="@+id/sbmit_btn_txt"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:gravity="center"
          android:layout_centerInParent="true"
          android:textColor="@color/transparant_color"
          android:text="@string/survey_create_text"/>

   </RelativeLayout>


</android.support.constraint.ConstraintLayout>