<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:card_view="http://schemas.android.com/tools"
    android:background="@color/transparant_color"
    android:elevation="10dp"
    android:layout_marginTop="?android:attr/actionBarSize"
    android:scrollbars="none"
    android:padding="20dp">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="?android:attr/actionBarSize">


        <android.support.v7.widget.CardView
            android:id="@+id/card_view"
            android:layout_width="fill_parent"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:layout_margin="5dp"
            card_view:cardCornerRadius="2dp"
            card_view:contentPadding="10dp"
            app:cardElevation="10dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintVertical_bias="0.1"
            card_view:background="@drawable/survey_create_panel_bg">

            <EditText
                android:id="@+id/survey_id_edt"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:gravity="center"
                android:textColor="@color/colorAccent"
                android:textSize="15dp"
                android:layout_gravity="center"
                android:backgroundTint="@android:color/transparent"
                android:hint="@string/survey_id_hint"/>
        </android.support.v7.widget.CardView>
        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="15dp"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:layout_marginBottom="5dp"
            app:cardElevation="10dp"
            app:layout_constraintTop_toBottomOf="@id/card_view"
            app:layout_constraintEnd_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="50dp">
                    <TextView
                        android:layout_width="150dp"
                        android:layout_height="40dp"
                        android:gravity="left|center_vertical"
                        android:textColor="@color/white"
                        android:paddingLeft="5dp"
                        android:background="@color/colorAccent"
                        android:text="@string/question_hdng_text"/>
                </LinearLayout>
                <EditText
                    android:id="@+id/question_txt_edt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="Question..."
                    android:maxLines="10"
                    android:padding="5dp"
                    android:layout_margin="5dp"
                    android:textSize="18dp"
                    android:backgroundTint="@android:color/transparent" />
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="0.5dp"
                    android:padding="5dp"
                    android:background="@android:color/darker_gray">
                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:orientation="horizontal">
                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_gravity="center">
                        <TextView
                            android:layout_width="150dp"
                            android:layout_height="40dp"
                            android:gravity="left|center_vertical"
                            android:textColor="@color/white"
                            android:paddingLeft="5dp"
                            android:background="@color/colorAccent"
                            android:text="@string/option_hdng_text"/>
                    </LinearLayout>
                    <LinearLayout
                        android:layout_width="50dp"
                        android:layout_height="match_parent"
                        android:layout_marginLeft="5dp"
                        android:gravity="center">
                        <ImageButton
                            android:id="@+id/add_option_btn"
                            android:layout_width="30dp"
                            android:layout_height="30dp"
                            android:layout_gravity="center"
                            android:background="@drawable/add"/>
                    </LinearLayout>
                </LinearLayout>
                <LinearLayout
                    android:id="@+id/option_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">
                </LinearLayout>
                <Button
                    android:id="@+id/add_question_btn"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_margin="5dp"
                    android:background="@color/colorAccent"
                    android:text="@string/sbmit_qn_text"
                    android:textColor="@color/white" />

            </LinearLayout>
        </android.support.v7.widget.CardView>
    </android.support.constraint.ConstraintLayout>
</ScrollView>